--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,12 @@
 {
   "name": "codespaces-with-mise",
   // ImageはGithubデフォルトのものを使う
-  // 最初のコンテナ作成時に一回だけ実行される
-  "onCreateCommand": "curl https://mise.run | sh",
+  // miseのインストール
+  "features": {
+    "ghcr.io/roul/devcontainer-features/mise:1": {}
+  },
+  // mise trustなどを実行
+  "postCreateCommand": "bash .devcontainer/postCreateCommand.sh",
   "customizations": {
     "vscode": {
       "settings": {
